--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "electron .",
-    "installer": "build -p always"
+    "test": "electron-builder",
+    "publish": "build -p always"
   },
   "build": {
     "appId": "com.saverl.youdownloader",
@@ -58,6 +59,7 @@
   },
   "dependencies": {
     "electron-is-dev": "^1.0.1",
+    "electron-log": "^2.2.17",
     "electron-updater": "^4.0.6",
     "materialize-css": "^1.0.0",
     "sweetalert2": "^8.0.1",
