--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "electron-builder": "^20.38.5"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "electron-is-dev": "^1.0.1",
     "electron-log": "^2.2.17",
     "electron-updater": "^4.0.6",
